# speechsynth

./: README.md  pyproject.toml  st_app.py  st_auth.py
attsila/: s3_utils.py
speechsynth/: __init__.py
